# VisionForge

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PACK_MANIFEST.json  README.md  VISIONFORGE_PROOF_PACKET.md  package-lock.json  package.json  visionforge-generic-next-codex-context-20260527T212459Z.codex-archive.json  visionforge-generic-next-codex-context-20260527T212459Z.excluded.json  visionforge-generic-next-codex-context-20260527T212459Z.findings.json  visionforge-generic-next-codex-context-20260527T212459Z.manifest.json  visionforge-generic-next-codex-context-20260527T212459Z.report.md  z.py
docs/codex-runs/archive/unclassified/20260527T212459Z/files/docs/source-quarantine/P31_duplicate_backend/s/: Cargo.toml  tauri.conf.json
docs/codex-runs/archive/unclassified/20260527T212459Z/files/docs/source-quarantine/P31_duplicate_backend/s/src/: lib.rs  state.rs
docs/codex-runs/archive/unclassified/20260527T212459Z/files/docs/source-quarantine/P31_duplicate_backend/s/src/ai/: captioner.rs  mod.rs  tagger.rs
docs/codex-runs/archive/unclassified/20260527T212459Z/files/docs/source-quarantine/P31_duplicate_backend/s/src/ai_batch/: downscale.rs  executor.rs  queue.rs
docs/codex-runs/archive/unclassified/20260527T212459Z/files/docs/source-quarantine/P31_duplicate_backend/s/src/comfyui/: client.rs  client_test.rs  models.rs  workflow.rs
docs/codex-runs/archive/unclassified/20260527T212459Z/files/docs/source-quarantine/P31_duplicate_backend/s/src/commands/: ai_batch_cmds.rs  ai_cmds.rs  checkpoint_cmds.rs  comfyui_cmds.rs  comparison_cmds.rs  config_cmds.rs  export_cmds.rs  (+4 more)
(+243 files in other folders)
