[package]
name = "visionforge"
version = "0.1.0"
description = "VisionForge — LLM-powered Stable Diffusion prompt engineering pipeline"
authors = ["you"]
edition = "2021"

[lib]
name = "visionforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
image = "0.25"
base64 = "0.22"
tokio-tungstenite = "0.24"
zip = "2"
rand = "0.9"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
